--- a/valueproject/style.css
+++ b/valueproject/style.css
@@ -18,7 +18,14 @@ a:hover {
   background-color: #fff;
   border: .05rem solid #fff;
 }
+#appraisers{
 
+
+    -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+  
+    
+  }
 
 /*
  * Base structure
@@ -127,3 +134,29 @@ body {
 .mastfoot {
   color: rgba(255, 255, 255, .5);
 }
+
+@-webkit-keyframes text-focus-in {
+    0% {
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  @keyframes text-focus-in {
+    0% {
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  
