--- a/valueproject/style.css
+++ b/valueproject/style.css
@@ -126,7 +126,23 @@ body {
   padding: .75rem 1.25rem;
   /* font-weight: 700; */
 }
-
+@font-face {
+    font-family: 'grandslangb-side';
+    src: ursl('grandslang-b-side-webfont.woff2') format('woff2'),
+         url('grandslang-b-side-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    
+    }
+  
+    @font-face {
+        font-family: 'monument_extendedregular';
+        src: url('monumentextended-regular-webfont.woff2') format('woff2'),
+             url('monumentextended-regular-webfont.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    
+    }
 
 /*
  * Footer
