--- a/valueproject/cover.css
+++ b/valueproject/cover.css
@@ -216,7 +216,7 @@ background-color: #ffffff;
 body {
   display: -ms-flexbox;
   display: flex;
-  color: #fff;
+  color: #000000;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
@@ -473,3 +473,5 @@ p {
     opacity: 1;
   }
 }
+
+
